--- a/swooblz/.env
+++ b/swooblz/.env
@@ -1,2 +1,9 @@
 REACT_APP_FIREBASE_API_KEY=AIzaSyAFr2GbPXDA4Eo9So_xEa4EOP4PANZsHY0
 REACT_APP_FIREBASE_AUTH_DOMAIN=swooblz.firebaseapp.com
+
+apiKey: "AIzaSyAFr2GbPXDA4Eo9So_xEa4EOP4PANZsHY0",
+authDomain: "swooblz.firebaseapp.com",
+databaseURL: "https://swooblz.firebaseio.com",
+projectId: "swooblz",
+storageBucket: "swooblz.appspot.com",
+messagingSenderId: "370329610912"
