--- a/swooblz/package.json
+++ b/swooblz/package.json
@@ -5,9 +5,12 @@
   "dependencies": {
     "@material-ui/core": "^3.9.3",
     "dotenv": "^7.0.0",
+    "firebase": "^5.10.1",
+    "firebase-tools": "^6.7.1",
     "particlesjs": "^2.2.3",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-firebase-hooks": "^1.2.0",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8"
