--- a/swooblz/package.json
+++ b/swooblz/package.json
@@ -5,15 +5,24 @@
   "dependencies": {
     "@material-ui/core": "^3.9.3",
     "dotenv": "^7.0.0",
+    "emoji-mart": "^2.11.0",
     "firebase": "^5.10.1",
     "firebase-tools": "^6.7.1",
+    "md5": "^2.2.1",
+    "mime-types": "^2.1.24",
+    "moment": "^2.24.0",
     "particlesjs": "^2.2.3",
     "react": "^16.8.4",
+    "react-avatar-editor": "^11.0.7",
+    "react-color": "^2.17.3",
     "react-dom": "^16.8.4",
     "react-firebase-hooks": "^1.2.0",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.86.0",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
